Added contents and new styles
Added contents section, new styles, sorted css files, new CV

--- a/src/Christiangh/MainCghWebsiteBundle/Resources/translations/messages.en.yml
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/translations/messages.en.yml
@@ -15,6 +15,10 @@ meta:
         title: ChristianGH - Sitemap
         description: Sitemap of Christian García Herreras website
         keywords: Christian García Herreras, Sitemap, Contents
+    contents:
+        title: ChristianGH - Contennts
+        description: Christian García Herreras web contents
+        keywords: Christian García Herreras, Contents, Categories, Collections
     error:
         404:
             title: ChristianGH - Error 404
@@ -61,12 +65,28 @@ mycv:
 
 contact:
     main: Send me an email to contact with me.
-    message_sent: Your email has been sent correctly, thank you for contact with me.
+    message_sent: Your email has been sent correctly, thank you for contact me.
     form:
         message: My Message...
         name: Name
         email: Email
         send: Send
+
+contents:
+    title: Contents
+    table:
+        name: Content name
+        category: Category
+        collection: Collection
+    view: View
+
+content:
+    title:
+        category: Category
+        collection: Collection
+    listing:
+        label: Content listing
+        title: Go to content listing
 
 error:
     404:
