Updated content section
Added Package entity

--- a/src/Christiangh/MainCghWebsiteBundle/Resources/translations/christiangh_main_cgh_website_content_content.en.yml
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/translations/christiangh_main_cgh_website_content_content.en.yml
@@ -1,5 +1,7 @@
-summarizing_quixote: applications-my-desk/summarizing-the-quixote.html
+jquery-highlighter: resources-jquery-plugins/jquery-highlighter.html
 
-social_grey: resources-social-networks/circle-grey.html
+social_icons_ghris: resources-social-networks/social-network-icons-ghris.html
 
-mixing_music: applications-lmp/mixing-music.html
+music-mixer-table: applications-lmp/my-music-mixer-table.html
+
+irish-stout-beer: applications-preloaders/irish-stout-beer.html
