--- a/src/Christiangh/MainCghWebsiteBundle/Resources/translations/christiangh_main_cgh_website_content_content.es.yml
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/translations/christiangh_main_cgh_website_content_content.es.yml
@@ -1,5 +1,7 @@
-summarizing_quixote: aplicaciones-mi-escritorio/resumiendo-el-quijote.html
+jquery-highlighter: recursos-jquery-plugins/jquery-highlighter.html
 
-social_grey: recursos-redes-sociales/circular-gris.html
+social_icons_ghris: recursos-redes-sociales/iconos-redes-sociales-ghris.html
 
-mixing_music: aplicaciones-lmp/mezclando-musica.html
+music-mixer-table: aplicaciones-lmp/mi-mesa-de-mezclas.html
+
+irish-stout-beer: aplicaciones-preloaders/cerveza-negra-irlandesa.html
