Updated structure of contents and added translation files

--- a/src/Christiangh/MainCghWebsiteBundle/Resources/translations/christiangh_main_cgh_website_content_content.en.yml
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/translations/christiangh_main_cgh_website_content_content.en.yml
@@ -1,7 +1,9 @@
 jquery-highlighter: resources-jquery-plugins/jquery-highlighter.html
 
-social_icons_ghris: resources-social-networks/social-network-icons-ghris.html
+social-icons-ghris: resources-social-networks/social-network-icons-ghris.html
 
 music-mixer-table: applications-lmp/my-music-mixer-table.html
 
 irish-stout-beer: applications-preloaders/irish-stout-beer.html
+
+travel-agency: applications-interfaces/travel-agency.html
