--- a/src/Christiangh/MainCghWebsiteBundle/Resources/translations/christiangh_main_cgh_website_content_content.es.yml
+++ b/src/Christiangh/MainCghWebsiteBundle/Resources/translations/christiangh_main_cgh_website_content_content.es.yml
@@ -1,7 +1,9 @@
 jquery-highlighter: recursos-jquery-plugins/jquery-highlighter.html
 
-social_icons_ghris: recursos-redes-sociales/iconos-redes-sociales-ghris.html
+social-icons-ghris: recursos-redes-sociales/iconos-redes-sociales-ghris.html
 
 music-mixer-table: aplicaciones-lmp/mi-mesa-de-mezclas.html
 
 irish-stout-beer: aplicaciones-preloaders/cerveza-negra-irlandesa.html
+
+travel-agency: aplicaciones-interfaces/agencia-de-viajes.html
